--- a/src/Acme/MainBundle/Resources/views/Profile/index.html.twig
+++ b/src/Acme/MainBundle/Resources/views/Profile/index.html.twig
@@ -3,35 +3,49 @@
 {% block body %}
 	{% include 'AcmeMainBundle:Default:header.html.twig' %}
 	<div class="profile_form_wrapper">
-		<form class="form-horizontal">
+		<form class="form-horizontal" method="post" action="./">
 
 			<div class="title-block">Изменение регистрационных данных</div>
 			<div class="control-group">
 				<label class="control-label">Логин</label>
-				<input type="text" class="input-xlarge" id="login" />
+				<input type="text" class="input-xlarge" id="login" value="{{login}}" name="login" />
 				<p class="help-block">Ваше имя для входа в систему</p>
 			</div>
 			<div class="control-group">
 				<label class="control-label">E-mail</label>
-				<input type="text" class="input-xlarge" id="mail" />
+				<input type="text" class="input-xlarge" id="mail" value="{{email}}" name="email" />
 				<p class="help-block">Ваша электронная почта</p>
 			</div>
 			<div class="control-group">
 				<label class="control-label">Пароль</label>
-				<input type="text" class="input-xlarge" id="newpass" />
+				<input type="password" class="input-xlarge" id="newpass" name="newpass" />
 					<p class="help-block">Введите новый пароль</p>
 			</div>
 
 			<div class="title-block">Подтверждение аутентификации</div>
 			<div class="control-group">
 				<label class="control-label">Старый пароль</label>
-				<input type="password" class="input-xlarge" id="oldpass" />
+				<input type="password" class="input-xlarge" id="oldpass" name="oldpass" />
 				<p class="help-block">Для сохранения изменений введите старый пароль</p>
 			</div>
+
+			<input type="hidden" name="is_update" value="1" />
 
 			<div class="form-actions">
 				<button type="submit" class="btn">Сохранить</button>
 			</div>
+
+			{% if error.message is defined %}
+			<div class="control-group">
+				<p class="help-block">{{error.message}}</p>
+			</div>
+			{% endif %}
+
+			{% if success.message is defined %}
+			<div class="control-group">
+				<p class="help-block">{{success.message}}</p>
+			</div>
+			{% endif %}
 
 		</form>
 	</div>
